[tool.poetry]
name = "fido2"
version = "1.0.0-dev0"
description = "FIDO2/WebAuthn library for implementing clients and servers."
authors = ["Dain Nilsson <dain@yubico.com>"]
homepage = "https://github.com/Yubico/python-fido2"
repository = "https://github.com/Yubico/python-fido2"
keywords = ["fido2", "webauthn", "ctap", "u2f"]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Internet",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
include = [
  { path = "COPYING", format = "sdist"},
  { path = "COPYING.MPLv2", format = "sdist"},
  { path = "COPYING.APLv2", format = "sdist"},
  { path = "NEWS", format = "sdist"},
  { path = "README.adoc", format = "sdist"},
]

[tool.poetry.dependencies]
python = "^3.6"
cryptography = ">=2.1, !=35, <37"
dataclasses = {version = "^0.8", python = "<3.7"}
pyscard = {version = "^1.9 || ^2.0.0", optional = true}

[tool.poetry.extras]
pcsc = ["pyscard"]

[tool.poetry.dev-dependencies]
pytest = "^6.0"
mock = "^4.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
