[package]
name = "fido2-client"
version = "0.1.0"
edition = "2024"
description = "FIDO2/WebAuthn client and CTAP protocol"
license = "BSD-2-Clause"

[dependencies]
fido2-server = { path = "../fido2-server" }
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
flate2 = "1"
getrandom = "0.3"
hkdf = "0.12"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_trace"] }
p256 = { version = "0.13", features = ["ecdh", "ecdsa"] }
pcsc = "2"
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
url = "2"
zeroize = { version = "1", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
hidapi = { version = "2", default-features = false, features = ["linux-static-hidraw"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
hidapi = { version = "2" }

[lints]
workspace = true
