[package]
name = "fido2-server"
version = "0.1.0"
edition = "2024"
description = "FIDO2/WebAuthn server types and verification"
license = "BSD-2-Clause"

[dependencies]
aes = "0.8"
aes-gcm = "0.10"
base64 = "0.22"
bitflags = "2"
cbc = { version = "0.1", features = ["alloc"] }
digest = "0.10"
hkdf = "0.12"
ecdsa = { version = "0.16", features = ["verifying"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
elliptic-curve = { version = "0.13", features = ["sec1"] }
getrandom = "0.3"
hmac = "0.12"
k256 = { version = "0.13", features = ["ecdsa"] }
log = { version = "0.4", features = ["max_level_trace", "release_max_level_trace"] }
p256 = { version = "0.13", features = ["ecdh", "ecdsa"] }
p384 = { version = "0.13", features = ["ecdsa"] }
p521 = { version = "0.13", features = ["ecdsa"] }
rsa = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = { version = "0.10", features = ["oid"] }
sha2 = { version = "0.10", features = ["oid"] }
thiserror = "2"
url = "2"
x509-cert = "0.2"

[dev-dependencies]
rand_core = { version = "0.6", features = ["getrandom"] }

[lints]
workspace = true
