[package]
name = "fido2"
version = "0.1.0"
edition = "2024"
description = "FIDO2/WebAuthn library"
license = "BSD-2-Clause"

[dependencies]
getrandom = "0.3"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_trace"] }
pcsc = "2"
thiserror = "2"

[target.'cfg(target_os = "linux")'.dependencies]
hidapi = { version = "2", default-features = false, features = ["linux-static-hidraw"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
hidapi = { version = "2" }
