[tool.poetry]
name = "fido2-example-server"
version = "0.1.0"
description = "Example server for python-fido2"
authors = ["Dain Nilsson <dain@yubico.com>"]
license = "Apache-2"
packages = [
  { include = "server" },
]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0"
fido2 = {path = "../.."}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "server.server:main"
server-u2f = "server.server_u2f:main"
